Move version to latest

--- a/manual/man.1
+++ b/manual/man.1
@@ -6,7 +6,7 @@
 
 
 │ Basic
-  $ npx @lets/publish [--help] [--dry-run]
+  $ npx @lets/publish -- [--help] [--dry-run]
 
 │ Arguments
   --help    {Bool} Print this help document
